@@ -79,7 +79,7 @@ our %equipSlot_rlut = (
 	'leftAccessory'  => 128,
 	'topHead'        => 256,
 	'midHead'        => 512,
-	'carry' 		 => 1024,
+	'carry' 	 => 1024,
 	'arrow'          => '' #arrow seems not to have any ID
 );
 our %elements_lut;
@@ -161,8 +161,8 @@ our %jobs_lut = (
 	177 => 'Professor',
 	178 => 'Stalker',
 	179 => 'Creator',
-	180 => 'Clown / Gypsy',
-	181 => 'Peco Paladin',
+	180 => 'Clown',
+	181 => 'Gypsy',
 
 	4001 => 'High Novice',
 	4002 => 'High Swordsman',
